ext2fs: check for eh_depth in ext4_ext_check_header()

PR:			259112
Reported by:		Robert Morris <rtm@lcs.mit.edu>
Reviewed by:		fsu (src)
Differential Revision:	https://reviews.freebsd.org/D33030

(cherry picked from commit be60d8f276fa20fc11ad814e54c9c2540f79c7da)